# otel-imp

./: .python-version  Dockerfile  README.md  compose.yml  pyproject.toml  run.sh
etc/: otel-collector-config.yaml  prometheus.yaml
metrics_study/: routes.py  webserver.py
